--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -38,7 +38,7 @@ div.mission-stmt {
   #header-logo {
     margin: 0 auto;
   }
-  h1 {
+  div.mission-stmt {
     display: none;
   }
 }
